--- a/en.html
+++ b/en.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="../styles/reset.css">
-        <link rel="stylesheet" href="../styles/style.css">
+        <link rel="stylesheet" href="./styles/reset.css">
+        <link rel="stylesheet" href="./styles/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Golos+Text&display=swap" rel="stylesheet">
-        <title>Portfolio</title>
+        <title>Kai Kono - Portfolio (EN)</title>
     </head>
     <header class="header">
         <nav role="navigation">
@@ -55,7 +55,7 @@
                     <div class="qualifications-container">
                         <span class="qualifications-entry">
                             <span class="qualification-img">
-                                <img src="../assets/images/language.png">
+                                <img src="./assets/images/language.png">
                             </span>
                             <span class="qualification-text">
                                 <h3>TOEFL 110</h3>
@@ -66,7 +66,7 @@
                         </span> 
                         <span class="qualifications-entry">
                             <span class="qualification-img">
-                                <img src="../assets/images/coding_language.png">
+                                <img src="./assets/images/coding_language.png">
                             </span>
                             <span class="qualification-text">
                                 <h3>HTML / CSS / JavaScript</h3>
@@ -75,7 +75,7 @@
                         </span>
                         <span class="qualifications-entry">
                             <span class="qualification-img">
-                                <img src="../assets/images/illustrator_logo.png">
+                                <img src="./assets/images/illustrator_logo.png">
                             </span>
                             <span class="qualification-text">
                                 <h3>Adobe Illustrator</h3>
@@ -84,7 +84,7 @@
                         </span>
                         <span class="qualifications-entry">
                             <span class="qualification-img">
-                                <img src="../assets/images/cad_logo.png">
+                                <img src="./assets/images/cad_logo.png">
                             </span>
                             <span class="qualification-text">
                                 <h3>CAD / BIM</h3>
@@ -114,11 +114,11 @@
                         
                         <div class="img-slideshow">
                             <div class="imgs">
-                                <img class="studies-img1" src="../assets/images/project_1_1.png">
-                                <img class="studies-img1" src="../assets/images/project_1_2.png">
-                                <img class="studies-img1" src="../assets/images/project_1_3.png">
-                                <img class="studies-img1" src="../assets/images/project_1_4.png">
-                                <img class="studies-img1" src="../assets/images/project_1_5.png">
+                                <img class="studies-img1" src="./assets/images/project_1_1.png">
+                                <img class="studies-img1" src="./assets/images/project_1_2.png">
+                                <img class="studies-img1" src="./assets/images/project_1_3.png">
+                                <img class="studies-img1" src="./assets/images/project_1_4.png">
+                                <img class="studies-img1" src="./assets/images/project_1_5.png">
                             </div>
                             <div class="arrows">
                                 <button class="arrow-button-left" onclick="moveSlide1(-1)"> ◀︎ </button>
@@ -140,12 +140,12 @@
                         
                         <div class="img-slideshow">
                             <div class="imgs">
-                                <img class="studies-img2" src="../assets/images/project_3_1.png">
-                                <img class="studies-img2" src="../assets/images/project_3_2.png">
-                                <img class="studies-img2" src="../assets/images/project_3_3.png">
-                                <img class="studies-img2" src="../assets/images/project_3_4.png">
-                                <img class="studies-img2" src="../assets/images/project_3_5.png">
-                                <img class="studies-img2" src="../assets/images/project_3_6.png">
+                                <img class="studies-img2" src="./assets/images/project_3_1.png">
+                                <img class="studies-img2" src="./assets/images/project_3_2.png">
+                                <img class="studies-img2" src="./assets/images/project_3_3.png">
+                                <img class="studies-img2" src="./assets/images/project_3_4.png">
+                                <img class="studies-img2" src="./assets/images/project_3_5.png">
+                                <img class="studies-img2" src="./assets/images/project_3_6.png">
                             </div>
                             <div class="arrows">
                                 <button class="arrow-button-left" onclick="moveSlide2(-1)"> ◀︎ </button>
@@ -173,7 +173,7 @@
                     <div class="contact-content">
                         <span class="contact-details">
                             <span class="contact-img">
-                                <img src="../assets/images/mail-icon.png">
+                                <img src="./assets/images/mail-icon.png">
                             </span>
                             <span id="mail">
                                 <p>kai9kono@gmail.com</p>
@@ -181,7 +181,7 @@
                         </span>
                         <span class="contact-details">
                             <span class="contact-img">
-                                <img src="../assets/images/phone-icon.png"> 
+                                <img src="./assets/images/phone-icon.png"> 
                             </span>
                             <span id="phone">
                                 <p>080-9469-1969</p>
@@ -190,6 +190,6 @@
                     </div>
                 </div>
         </div>
-        <script src="../scripts/script.js"></script>
+        <script src="./scripts/script.js"></script>
     </body>
 </html>
