--- a/en.html
+++ b/en.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="./styles/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="image_src" href="./assets/images/thumbnail.png">
         <link href="https://fonts.googleapis.com/css2?family=Golos+Text&display=swap" rel="stylesheet">
         <title>Kai Kono - Portfolio (EN)</title>
     </head>
