--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="image_src" href="./assets/images/thumbnail.png">
+        <link rel="icon" type="image/x-icon" href="./assets/images/portrait-icon.ico"/>
         <link href="https://fonts.googleapis.com/css2?family=Golos+Text&display=swap" rel="stylesheet">
         <title>Kai Kono - Portfolio (JP)</title>
     </head>
