--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                 <img src="./assets/images/mail-icon.png">
                             </span>
                             <span id="mail">
-                                <p>kai9kono@gmail.com</p>
+                                <a href="mailto:kai9kono@gmail.com">kai9kono@gmail.com</a>
                             </span> 
                         </span>
                         <span class="contact-details">
@@ -211,7 +211,7 @@
                                 <img src="./assets/images/phone-icon.png"> 
                             </span>
                             <span id="phone">
-                                <p>080-9469-1969</p>
+                                <a href="tel:080-9469-1969">080-9469-1969</p>
                             </span>
                         </span>
                     </div>
