--- a/en.html
+++ b/en.html
@@ -46,7 +46,7 @@
                     <p class="bio">I have always been into creation, and sice I had experience in coding, I decided to major in architecture where I could utilize my skills fully. However, even during architectural design, I found myself fiddling with various softwares and programs, which led me to realize that I wanted to pursure in digital design. Specifically, I desire to pursure UI/UX design, since the field has much in common with architecture.</p> 
                     <br/>
                     <br/>
-                    <p class="bio">My favorite type of design is sipmle, natural, and easy on the eyes.</p>
+                    <p class="bio">My favorite type of design is simple, natural, and easy on the eyes.</p>
                 </span>
                 <span id="portrait"></span>
             </div>
