--- a/study1.html
+++ b/study1.html
@@ -1,18 +1,25 @@
 <div class="studies-ex">
     <div class="studies-text">
+        <p class="studies-entry" id="studies1">Hotel Oasis</p>
+        <p id="studies6">(大学３年次設計課題、制作期間 7週間)</p>
+        <br/>
+        <br/>
+        <div class="content">
         <button type="button" class="accordion">
-            <p id="studies1" class="studies-entry">Hotel Oasis</p>
-            <p id="studies6">(3rd Year Architectural Design Class, Period: 7 Weeks)</p>
+            <p class="studies-entry" id="studies1">Hotel Oasis</p>
+            <p id="studies6">(大学３年次設計課題、制作期間 7週間)</p>
         </button>
+
         <div class="content1">
-            <p id="studies2">The task was to create a multi-purpose facility in place of the current offices buildings located by the Ohatsu-Tenjin shrine, near Osaka station. I created a hotel for tourists visiting the shrine to secure a similar revenue to the pervious office buildings. I also designed a park which has a similar axis reminiscing of a Japanese style garden. </p>
+            <p id="studies2">大学三年次の建築設計演習にて、大阪駅付近にあるお初天神の周りのビルを撤去し新たな複合施設を設計するという課題が与えられました。私はオフィスと同等の収益を見込むための収容率を確保する必要があると考えたため、観光客に向けた高層ホテルを設計しました。また、街の公益性に着眼し、お初天神との関連性を持たせるため、日本庭園の軸を応用した公園も設計しました。</p>
             <br/>
-            <p id="studies3">Through this project, I learned that a realistic balance between what the designer wants to create and what is demanded must be considered. Even though a multi-purpose facility was demanded, there was still the need to secure the same or a larger revenue and capacity rate. I learned that the designer does not always have the power to create anything they want.</p>
+            <p id="studies3">この課題を通して、設計者として作りたいものと現実的に求められているもののバランスをとらなければいけないことを学びました。複合施設とはいえ、元々オフィスで収益を得ていた地域には同等またはそれ以上の価値があるものを建設する必要があり、必ずしも設計者が作りたいものを作れないという事実を学びました。</p>
             <br/>
-            <p id="studies4">Also, this was my first project utilizing Revit. In the short period I was given, I was able to learn a completely new tool. Before this project, I used AutoCAD, since it was more suited for homes and smaller facilities. In result, I learned the importance of choosing tools depending on the task, since Revit was a much more efficient option.</p>
+            <p id="studies4">また、はじめてRevitというモデリングソフトをしようした課題でもあったため、与えられた短期間で新たなツールを学ぶことができ、自分にとって成長を感じられたプロジェクトでした。以前は住宅などの設計で簡易的な図面を作るためにはCADが効率的でしたが、大型の施設を作るためには緻密な設計より構造や素材がわかるプレゼンテーションの方が優れていると感じたため使用しました。結果的にはより効率的だったため、ものによってツールを変えることの大切さも学ぶことができました。</p>
+            <p id="studies4">また、はじめてRevitというモデリングソフトを使用した課題でもあったため、与えられた短期間で新たなツールを学ぶことができ、自分にとって成長を感じられたプロジェクトでした。以前は住宅などの設計で簡易的な図面を作るためにはCADが効率的でしたが、大型の施設を作るためには緻密な設計より構造や素材がわかるプレゼンテーションの方が優れていると感じたため使用しました。結果的にはより効率的だったため、ものによってツールを変えることの大切さも学ぶことができました。</p>
         </div>
     </div>
-    
+                            
     <div class="img-slideshow">
         <div class="imgs">
             <img class="studies-img1" src="./assets/images/project_1_1.png">
