Finished Studies2 and Studies2 EN

--- a/study2-en.html
+++ b/study2-en.html
@@ -9,20 +9,20 @@
         <link rel="image_src" href="./assets/images/thumbnail.png">
         <link rel="icon" type="image/x-icon" href="./assets/images/portrait-icon.ico"/>
         <link href="https://fonts.googleapis.com/css2?family=Golos+Text&display=swap" rel="stylesheet">
-        <title>Kai Kono - Portfolio (JP)</title>
+        <title>Kai Kono - Portfolio (EN)</title>
     </head>
     <header class="header">
         <nav role="navigation">
             <div id="back">
                 <button class="back-arrow left">
-                    <a href="./index.html">
+                    <a href="./en.html">
                     <svg width="15px" height="20px" viewBox="0 0 50 80" xml:space="preserve">
                       <polyline fill="none" stroke="#232323" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" points="45.63,75.8 0.375,38.087 45.63,0.375 "/>
                     </svg>  
                     </a>
                   </button>
             </div>
-            <span class="toggle-language"><button><a href="./study2-en.html"> <strong>JP</strong> / EN </a></button></span>
+            <span class="toggle-language"><button><a href="./study2.html"> JP / <strong>EN</strong> </a></button></span>
         </nav>
     </header>
     <body>
@@ -30,7 +30,7 @@
             <div class="studies-bg" id="page2">
 
                 <p class="studies-entry">Bookers</p>
-                <p id="studies6"> (株式会社インフラトップ長期インターン　研修課題、制作期間 1ヶ月 / コードはこちら: <a href="https://www.github.com/kai9kono/bookers2" target="_blank">GitHub</a>)</p>
+                <p id="studies6"> (Infratop Inc. Long-term Internship, Period: 1 month / Code here: <a href="https://www.github.com/kai9kono/bookers2" target="_blank">GitHub</a>) </p>
 
                 <div class="studies-img">
                     <img class="studies-img1" src="./assets/images/project_3_1.png">
@@ -43,11 +43,11 @@
 
                 
                 <div class="studies-content">
-                    <p class="studies-text">長期インターンの研修課題にて、Ruby及びRuby on Railsを新たなプログラミング言語として習得しました。Bookersという、ユーザーが読んだ本のタイトルと意見を投稿し、投稿に対していいねやコメントができるという簡易的なアプリケーションを作成しました。</p>
+                    <p id="studies-text">At a long-term Internship I took part in, I learned how to code with Ruby and Ruby on Rails. I created an application called Bookers, in which users could post the title and opinion of books they have read, and have them seen by other users.</p>
                     <br/>
-                    <p class="studies-text">この課題を通して、初めてデータベース機能を持つアプリケーションを作成する経験ができました。今まで制作してきたプログラムやウェブサイトはデータベースがないものでした。そのため、投稿フォームや投稿の保存と表示をする際のフローを理解することに苦労しましたが、１ヶ月という短い期間で言語を学習し、プロジェクトを完成することができました。</p>
+                    <p id="studies-text">This was my first time developing a product with a proper database. Since every code I have created before had no database I struggled to learn the basics of database and storage. However, I was able to learn the language and finish the project within a month.</p>
                     <br/>
-                    <p id="studies-text">本インターンでは、エンジニアへの転職を志望する方々のプログラミング学習をメンターとして支えるという業務を行っていました。そのため、様々な背景を持つ方々とのコミュニケーションをすることを学べた上に、メンターとして簡潔に、順序立てを行うことでわかりやすく話す能力も身につきました。</p>
+                    <p id="studies-text">At the internship, I took part as a mentor to help students who are interested in becoming engineers learn coding. Through this, I learned how to communicate with people with different backgrounds, and to speak in an organized manner.</p>
                 </div>
 
             </div>
