--- a/study2-en.html
+++ b/study2-en.html
@@ -15,7 +15,7 @@
         <nav role="navigation">
             <div id="back">
                 <button class="back-arrow left">
-                    <a href="./en.html">
+                    <a href="./en.html#studies">
                     <svg width="15px" height="20px" viewBox="0 0 50 80" xml:space="preserve">
                       <polyline fill="none" stroke="#232323" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" points="45.63,75.8 0.375,38.087 45.63,0.375 "/>
                     </svg>  
@@ -30,7 +30,7 @@
             <div class="studies-bg" id="page2">
 
                 <p class="studies-entry">Bookers</p>
-                <p id="studies6"> (Infratop Inc. Long-term Internship, Period: 1 month / Code here: <a href="https://www.github.com/kai9kono/bookers2" target="_blank">GitHub</a>) </p>
+                <p id="studies6"> (Infratop Inc. Long-term Internship, Period: 1 month, Language: HTML, CSS, Ruby, Ruby on Rails / Code here: <a href="https://www.github.com/kai9kono/bookers2" target="_blank">GitHub</a>) </p>
 
                 <div class="studies-img">
                     <img class="studies-img1" src="./assets/images/project_3_1.png">
