--- a/study2.html
+++ b/study2.html
@@ -15,7 +15,7 @@
         <nav role="navigation">
             <div id="back">
                 <button class="back-arrow left">
-                    <a href="./index.html">
+                    <a href="./index.html#studies">
                     <svg width="15px" height="20px" viewBox="0 0 50 80" xml:space="preserve">
                       <polyline fill="none" stroke="#232323" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" points="45.63,75.8 0.375,38.087 45.63,0.375 "/>
                     </svg>  
@@ -30,7 +30,7 @@
             <div class="studies-bg" id="page2">
 
                 <p class="studies-entry">Bookers</p>
-                <p id="studies6"> (株式会社インフラトップ長期インターン　研修課題、制作期間 1ヶ月 / コードはこちら: <a href="https://www.github.com/kai9kono/bookers2" target="_blank">GitHub</a>)</p>
+                <p id="studies6"> (株式会社インフラトップ長期インターン　研修課題、制作期間 1ヶ月、使用言語： HTML, CSS, Ruby, Ruby on Rails / コードはこちら: <a href="https://www.github.com/kai9kono/bookers2" target="_blank">GitHub</a>)</p>
 
                 <div class="studies-img">
                     <img class="studies-img1" src="./assets/images/project_3_1.png">
@@ -43,9 +43,9 @@
 
                 
                 <div class="studies-content">
-                    <p class="studies-text">長期インターンの研修課題にて、Ruby及びRuby on Railsを新たなプログラミング言語として習得しました。Bookersという、ユーザーが読んだ本のタイトルと意見を投稿し、投稿に対していいねやコメントができるという簡易的なアプリケーションを作成しました。</p>
+                    <p id="studies-text">長期インターンの研修課題にて、Ruby及びRuby on Railsを新たなプログラミング言語として習得しました。Bookersという、ユーザーが読んだ本のタイトルと意見を投稿し、投稿に対していいねやコメントができるという簡易的なアプリケーションを作成しました。</p>
                     <br/>
-                    <p class="studies-text">この課題を通して、初めてデータベース機能を持つアプリケーションを作成する経験ができました。今まで制作してきたプログラムやウェブサイトはデータベースがないものでした。そのため、投稿フォームや投稿の保存と表示をする際のフローを理解することに苦労しましたが、１ヶ月という短い期間で言語を学習し、プロジェクトを完成することができました。</p>
+                    <p id="studies-text">この課題を通して、初めてデータベース機能を持つアプリケーションを作成する経験ができました。今まで制作してきたプログラムやウェブサイトはデータベースがないものでした。そのため、投稿フォームや投稿の保存と表示をする際のフローを理解することに苦労しましたが、１ヶ月という短い期間で言語を学習し、プロジェクトを完成することができました。</p>
                     <br/>
                     <p id="studies-text">本インターンでは、エンジニアへの転職を志望する方々のプログラミング学習をメンターとして支えるという業務を行っていました。そのため、様々な背景を持つ方々とのコミュニケーションをすることを学べた上に、メンターとして簡潔に、順序立てを行うことでわかりやすく話す能力も身につきました。</p>
                 </div>
