--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
                     <div class="study-img">
                         <a href="./study2.html"><img src="./assets/images/project_3_1.png"></a>
                     </div>
-                    <div class="study-img">
+                    <!-- <div class="study-img">
                         <a href="./study3.html"><img src="./assets/images/project_5_1.JPG"></a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
                 <div class="contact" id="contact">
