--- a/en.html
+++ b/en.html
@@ -112,9 +112,9 @@
                     <div class="study-img">
                         <a href="./study2-en.html"><img src="./assets/images/project_3_1.png"></a>
                     </div>
-                    <!-- <div class="study-img">
-                        <a href="./study3-en.html"><img src="./assets/images/project_5_1.jpg"></a>
-                    </div> -->
+                    <div class="study-img">
+                        <a href="./study3-en.html"><img src="./assets/images/portfolio.png"></a>
+                    </div>
                 </div>
             </div>
                 <div class="contact">
