--- a/study2.html
+++ b/study2.html
@@ -15,7 +15,7 @@
         <nav role="navigation">
             <div id="back">
                 <button class="back-arrow left">
-                    <a href="./index.html#studies">
+                    <a href="./en.html#studies">
                     <svg width="15px" height="20px" viewBox="0 0 50 80" xml:space="preserve">
                       <polyline fill="none" stroke="#232323" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" points="45.63,75.8 0.375,38.087 45.63,0.375 "/>
                     </svg>  
